# lego_arch

./: Cargo.toml  README.md
arm/: README.md
riscv/: Cargo.toml  README.md
riscv/src/: asm.rs  lib.rs  mmap_time.rs
riscv/src/dbg/: dbg.rs  mod.rs  shared.rs
src/: lib.rs
src/riscv/: ext_zicsr.rs  mod.rs
x86/: Cargo.toml  README.md
