[package]
name = "lego_arch"
version = "0.1.0"
edition = "2021"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = { path = "riscv", version = "0.1.0" }

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
x86 = { path = "x86", version = "0.1.0" }

[target.'cfg(any(target_arch = "arm", target_arch = "aarch64"))'.dependencies]
arm = { path = "arm", version = "0.1.0" }

[workspace]
members = ["riscv", "arm", "x86"]

[features]
# riscv features
rv_dbg = ["riscv/dbg"]
rv_mch = ["riscv/mch"]
rv_spv = ["riscv/spv"]
rv_hpv = ["riscv/hpv"]
rv_virt = ["riscv/virt"]
rv_user = ["riscv/user"]
rv_trap = ["riscv/trap"]
